--- a/clonepurwadhika.html
+++ b/clonepurwadhika.html
@@ -8,90 +8,192 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="../latbotstrap/bootstrap-4.3.1-dist/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/1dd72ca538.js"></script>
 </head>
 <body>
-    <div class="header-container pt-2 pb-4">
-        <div class="navbar navbar-logo brand brand-container">
-              <img src="logo.b4fc6414.png" width="240" height="40" alt="">
-        </div>
-        <div class="dropdown link-container">
-            <div class="box-link">
-                <div class= "dropdown-toggle link mr-4" type="text" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Course
-                </div>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#"></a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-                <div class=" dropdown-toggle link mr-4" type="text" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Community
-                </div>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-                <div class="dropdown-toggle link mr-4" type="text" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Student Life
-                </div>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
-                <div class=" dropdown-toggle link mr-4" type="text" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    About
-                </div>
-                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                </div>
+    <div class="container-fluid position-fixed bg-white main">
+        <nav class="navbar navbar-expand-lg navbar-light ">
+            <a class="navbar-brand pr-2 logo" href="#">
+                <img src="logo.b4fc6414.png"  alt="">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse main2" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto course text-weight-bold">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle isi" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Course
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-weight-bold" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                            </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                    </li>
+                    <li class="nav-item dropdown main1">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Dropdown
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="#">Action</a>
+                                <a class="dropdown-item" href="#">Another action</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
+                    </li>
+                </ul>
+                <div class="btn btn-success rounded-pill panjang d-none d-md-block">Sign in</div>
             </div>
-            <div class="button-container">
-                <button class="btn btn-primary rounded-pill button px-4" type="button" >
-                    Sign In
-                </button>
-            </div>
-        </div>
+        </nav>
     </div>
-    <div class="row kotakparent ">
-        <div class="col-md-6 sec1 ">
-            <div class="kotaktext">
-                <p class="maintext">Siapkah Kamu menghadapi Era Digital?</p>
-                <p class="secondarytext">Lengkapi diri dengan keahlian digital seperti Coding, Data Science, Digital Marketing, dan UI/UX dengan pilihan program training Kami
-                    </p>
-                <button class="btn btn-outline-success rounded-pill px-5 pelajari ">Pelajari lebih lanjut</button>  
+    <div class=" kotakutama">
+        <div class="container-fluid pt-5">
+            <div class=" row kotakparent ">
+                <div class="col-md-6 sec1 order-md-1 order-2 foto">
+                    <div class="kotaktext">
+                        <p class="maintext ">Siapkah Kamu menghadapi Era Digital?</p>
+                        <p class="secondarytext font-weight-normal">Lengkapi diri dengan keahlian digital seperti Coding, Data Science, Digital Marketing, dan UI/UX dengan pilihan program training Kami
+                            </p>
+                        <button class="btn btn-outline-success rounded-pill px-5 pelajari ">Pelajari lebih lanjut</button>
+                        <div class="social-media pt-1 pl-2 d-flex">
+                            <div class=" rounded-circle  text-center lingkar mr-2">
+                                <i class="fab fa-instagram "></i> 
+                            </div>
+                            <div class="rounded-circle text-center lingkar mr-2">
+                                <i class="fab fa-facebook-square"></i>                       
+                            </div>
+                            <div class="rounded-circle text-center lingkar mr-2">
+                                <i class="fab fa-linkedin-in "></i>
+                            </div>                            
+                            <div class="rounded-circle text-center lingkar mr-2">
+                                <i class="fab fa-youtube"></i>                      
+                            </div>
+                            <div class="rounded-pill text-center lingkar blog">
+                                <a href="#" class="blog1">Blog</a>
+                            </div>
+                        </div>  
+                    </div>
+                </div>
+                <div class="col-md-6 sec1 order-md-2 order-1 foto">
+                <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                        <img src="banner4.b096ec0e.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                        <img src="banner6.1799d6b4.png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
             </div>
         </div>
-        <div class="col-md-6 w-100 sec1">
-        <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                <img src="banner4.b096ec0e.jpg" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                <img src="banner6.1799d6b4.png" class="d-block w-100" alt="...">
+        <div class="container">
+            <div class="row text-center bagian2  ">
+                <div class="col-md-12 text2 foto" >
+                    Mengapa Memilih Purwadhika?
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
         </div>
+        <!-- services -->
+        <div class=" services-container">
+            <div class="row" >
+                <div class="col-12 col-sm-6 p-0 w-100 d-md-flex flex-sm-row " >
+                    <div class=" gambar ">
+                        <img src="icon1.png"  alt="">
+                    </div>
+                    <div class="servicestext ">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe molestias unde aperiam sunt, iusto odit dolore iure, amet delectus dicta ducimus quae non maiores quos ad architecto doloremque fugit! Exercitationem?
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 p-0 d-md-flex flex-sm-row">
+                    <div class=" gambar">
+                        <img src="icon2.png" alt="">
+                    </div>
+                    <div class="servicestext">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias tenetur nisi consequuntur magni, ipsum, quam numquam deleniti, nobis laborum mollitia iste. Illum aperiam vitae corporis dolorum eum assumenda voluptas officiis?
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-6 p-0 d-md-flex">
+                    <div class="gambar">
+                        <img src="icon3.png" alt="">
+                    </div>
+                    <div class="servicestext">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident eos maiores optio ipsum dolore consectetur, quasi sequi! Quidem cum id et autem asperiores nihil in corrupti fugit rerum, consequuntur aliquid.
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 p-0 d-md-flex">
+                    <div class="gambar">
+                        <img src="icon4.png" alt="">
+                    </div>
+                    <div class="servicestext">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit vel provident rem, nisi eligendi maiores animi debitis officia deleniti? Nihil sed inventore incidunt natus unde explicabo sint ad exercitationem dolores?
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- frame youtube -->
+        <div class="frame">
+            <div class="row">
+                <div class="col-md-9 col-sm-12">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/QK5BevTX0DU"
+                            allowfullscreen></iframe>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-12">
+                    <p class="pt-4 main-Color font-weight-bold">Purwadhika TV | 22 Apr 2018</p>
+                    <h5 class="mb-4">Sneak Peek on Purwadhika Startup & Coding School</h5>
+                    <p class="text-muted">Here's some sneak peek on Purwadhika Startup & Coding School programs. On this channel you can see many activities that
+                    happened on our campuses...</p>
+                    <div class="text-center kotaktext1">
+                        <button class="btn btn-success tombolSignIn px-5 py-2 rounded-pill mt-5 " style="">Lihat Video</button>
+                    </div>
+                </div>    
+            </div>
+        </div>    
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 </html>
